@@ -1,3 +1,8 @@
+2012-04-21  Borut Razem  <borutr@users.sourceforge.net>
+  * gplink/lst.c:
+    fixed bug #3519850 - gplink fails to find source - patch attached
+  * include/stdhdr.h: updated copyright year
+
 2012-04-20  Borut Razem  <borutr@users.sourceforge.net>
   * libgputils/gpopcode.c: fixed bug #3519667 - gpdasm fails to decove
     movlb on pic16f enhanced midrange
